# discogs-intelligence-platform

./: .gitignore  AGENTS.md  CHANGELOG.md  PROJECT_BOOTSTRAP.md  README.md  Run Discogs Intelligence Platform.command  app.py  database.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
database/: __init__.py  connection.py  repository.py  schema.py  schema.sql
docs/: Architecture.md  BusinessModel.md  Configuration.md  Dashboard.md  Database.md  DatabaseMigrations.md  DecisionIntelligence.md  DesignPrinciples.md  EngineeringPrinciples.md  Explorer.md  Glossary.md  IntelligenceHistory.md  Journal.md  MarketplaceArchitecture.md  PersistenceArchitecture.md  PlatformArchitecture.md  PortfolioIntelligence.md  ReportingEngine.md  Roadmap.md  Vision.md
importers/: __init__.py  discogs_csv.py
reports/: __init__.py  markdown.py  models.py
scripts/: import-work.sh
services/: __init__.py  historical_intelligence.py  import_service.py  reporting_service.py
tests/: test_collection_explorer.py  test_collection_health.py  test_collection_health_experience.py  test_collection_health_navigation.py  test_collection_intelligence_execution_service.py  test_collection_intelligence_explorer.py  test_collection_trends.py  test_comparison_engine.py  test_comparison_presentation_service.py  test_comparison_viewmodels.py  test_configuration.py  test_dashboard_homepage.py  test_dashboard_homepage_integration.py  test_dashboard_homepage_service.py  test_dashboard_integration.py  test_database.py  test_hidden_gems.py  test_hidden_gems_experience.py  (+58 more)
(+260 files in other folders)
